--- a/views/destinations/show.ejs
+++ b/views/destinations/show.ejs
@@ -21,8 +21,8 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-
       </div>
+
 
 
       <div class="card mb-3">
@@ -51,10 +51,46 @@
           </form>
         </div>
         <div class="card-footer text-muted">
-          2 days ago
+          <%= destination.date%>
         </div>
       </div>
+    </div>
+    <div class="col-6">
+      <form action="/destinations/<%=destination._id %>/comments" method="POST" class="mb-3 validated-form" novalidate>
+        <div class="mb-3">
+          <label class="form-label" for="rating">Rate Your Experience</label>
+          <input class="form-range" type="range" min="1" max="5" name="comment[rating]" id="rating">
+        </div>
 
+        <div class="mb-3">
+          <label class="form-label" for="body">Comment</label>
+          <textarea class="form-control" name="comment[body]" id="body" cols="30" rows="3" required></textarea>
+        </div>
+        <div class="valid-feedback">
+          Looks good!
+        </div>
+        <button class="btn btn-success">Submit</button>
+      </form>
+
+      <% for(let comment of destination.comments ){ %>
+        <div class="card mb-3">
+          <div class="card-body">
+            <h5 class="card-title">
+              Rating:
+            </h5>
+            <p class="starability-result" data-rating="<%= comment.rating %>">
+              Rated: <%= comment.rating %> stars
+            </p>
+
+            <p class="card-text">
+              comment: <%= comment.body %>
+            </p>
+            <form action="/destinations/<%=destination._id %>/comments/<%=comment._id %>?_method=delete" method="POST">
+              <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+            </form>
+          </div>
+        </div>
+        <% } %>
     </div>
 
   </div>
