--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,12 +1,14 @@
 body {
   height: 100vh;
   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-  url("https://images.unsplash.com/photo-1596477745713-43eedd5b5e32?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2971&q=80");
+  url("https://images.unsplash.com/photo-1600466403153-50193d187dde?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2748&q=80");
+  /* url('https://images.unsplash.com/photo-1557589747-a830b99db298?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2507&q=80'); */
   background-size: cover;
   background-position: center;
   text-shadow: 0 0.05rem 0.1rem rgba(0,0,0,0.5);
 box-shadow: inset 0 0 5rem rgba(0,0,0,0.5)
 }
+
 
 .cover-container {
   max-width: 60vw;
@@ -33,3 +35,5 @@ border-bottom-color: white ;
   color:#333 ;
   text-shadow: none;
 }
+
+
