--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,7 +19,7 @@
           <h3 class="mb-0">Voyage Vibes</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#" aria-current="page">Home</a>
-            <a class="nav-link" href="/journeys">Journeys</a>
+            <a class="nav-link" href="/destinations">Destinations</a>
             <% if(!currentUser) { %>
               <a class="nav-link" href="/login">Login</a>
               <a class="nav-link" href="/register">Register</a>
@@ -37,12 +37,12 @@
           Unleash Your Wanderlust -- Journey Beyond Boundaries with Voyage Vibe!
 
         </p>
-        <a href="/journeys" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
-          Journeys</a>
+        <a href="/destinations" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
+          Shared Destinations</a>
       </main>
 
       <footer class="mt-auto text-white-50">
-        <p>&copy; 2023</p>
+        <p>&copy; 2023 -- by Heather Wang</p>
       </footer>
     </div>
 
