--- a/views/destinations/index.ejs
+++ b/views/destinations/index.ejs
@@ -1,13 +1,33 @@
 <% layout('layouts/boilerplate') %>
-<div id="cluster-map"  style="width: 100%; height: 500px;"></div>
+<div id="cluster-map" ></div>
 
-  <h1>All Destinations</h1>
-  <div>
-    <a href="/destinations/new">Create New destination</a>
-  </div>
+ 
 
-    <% for(let destination of destinations) {%>
+  <!-- <div>
+    <a href="/destinations/new" class="btn btn-success title-font  fs-4 text-white mb-3">
+    <i class="fa fa-plus-circle add" aria-hidden="true"></i> Create New destination </a>
+  </div> -->
+
+  <form action="/destinations" method="GET" class="form-inline" id="destination-search">
+      <div class="form-group">
+        <input type="text" name="search" placeholder="Destination search..." class="form-control mt-3">
+        
+<input type="Submit" value="Search" class="btn btn-sm btn-dark mt-1">
+      </div>
+  </form>
+
+ <h1 class="text-center"><%= result %></h1>
+
+ <div class="col-md-12">
+  <%if(noMatch){%>
+    <h3><%=noMatch%></h3>
+    <%}%>
+</div> 
+
+
+    <% destinations.forEach(function(destination) {%>
       <div class="card mb-3">
+ 
         <div class="row">
           <div class="col-md-4">
 
@@ -40,7 +60,57 @@
           </div>
         </div>
       </div>
-      <% } %>
+      <% }) %>
+
+<div class="container">
+            <div class="row">    
+                <div class=" text-center" >
+                <% if (pages && pages > 0) { %>
+                <ul class="pagination text-center">
+                    <% if (current == 1) { %>
+                    <li class="disabled"><a>First</a></li>
+                    <% } else { %>
+                    <li><a href="/destinations<%if(search){%>?search=<%=search%><%}%>">First</a></li>
+                    <% } %>
+             
+                    <% if (current == 1) { %>
+                    <li class="disabled"><a>«</a></li>
+                    <% } else { %>
+                    <li><a href="/destinations?page=<%= Number(current) - 1 %><%if(search){%>&search=<%=search%><%}%>">«</a></li>
+                    <% } %>
+             
+                    <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
+                    <% if (i !== 1) { %>
+                    <li class="disabled"><a>...</a></li>
+                    <% } %>
+                    <% for (; i <= (Number(current) + 4) && i <= pages; i++) { %>
+                    <% if (i == current) { %>
+                    <li class="active"><a><%= i %></a></li>
+                    <% } else { %>
+                    <li><a href="/destinations?page=<%= i %><%if(search){%>&search=<%=search%><%}%>"><%= i %></a></li>
+                    <% } %>
+                    <% if (i == Number(current) + 4 && i < pages) { %>
+                    <li class="disabled"><a>...</a></li>
+                    <% } %>
+                    <% } %>
+             
+                    <% if (current == pages) { %>
+                    <li class="disabled"><a>»</a></li>
+                    <% } else { %>
+                    <li><a href="/destinations?page=<%= Number(current) + 1 %><%if(search){%>&search=<%=search%><%}%>">»</a></li>
+                    <% } %>
+             
+                    <% if (current == pages) { %>
+                    <li class="disabled"><a>Last</a></li>
+                    <% } else { %>
+                    <li><a href="/destinations?page=<%= pages %><%if(search){%>&search=<%=search%><%}%>">Last</a></li>
+                    <% } %>
+                </ul>
+                <% } %>
+            </div>
+        </div>
+    </div>
+
 
 
 
