--- a/views/destinations/index.ejs
+++ b/views/destinations/index.ejs
@@ -1,120 +1,137 @@
-<% layout('layouts/boilerplate') %>
-<div id="cluster-map" ></div>
+<%- layout('layouts/boilerplate') %>
 
- 
+<% if (currentPage === 1) { %>
+    <div id="cluster-map-space"></div>
+    <div id="cluster-map"></div>
+<% } %>
 
-  <!-- <div>
-    <a href="/destinations/new" class="btn btn-success title-font  fs-4 text-white mb-3">
-    <i class="fa fa-plus-circle add" aria-hidden="true"></i> Create New destination </a>
-  </div> -->
 
-  <form action="/destinations" method="GET" class="form-inline" id="destination-search">
+
+ <form action="/destinations" method="GET" class="form-inline" id="destination-search">
       <div class="form-group">
-        <input type="text" name="search" placeholder="Destination search..." class="form-control mt-3">
-        
-<input type="Submit" value="Search" class="btn btn-sm btn-dark mt-1">
+        <input type="text" name="search" placeholder="Destination search..." class="form-control mt-3"> 
+        <input type="Submit" value="Search" class="btn btn-sm btn-dark mt-1">
       </div>
   </form>
 
- <h1 class="text-center"><%= result %></h1>
 
+
+
+<div class="text-center">
+    <% if (results === 'Search results for "undefined"'){ %>
+      <h1>All Destinations</h1>
+    <% } else {%>
+      <h1><%= results %></h1>
+    <% } %>
+  <p>
+    <% if (currentPage != 1) { %>
+        <a href="/destinations?page=1">Go to Map</a> | 
+    <% } %>
+    <a href="/destinations/new">Add a New Campground</a>
+  </p>
+</div>
+
+<!-- if no searched results, allow user back to all the destinations -->
  <div class="col-md-12">
   <%if(noMatch){%>
     <h3><%=noMatch%></h3>
+    <a href="/destinations"> Go back to all destinations</a>
     <%}%>
 </div> 
 
+<!-- Bootstrap5 Pagination  -->
+<nav aria-label="Page navigation" class="my-5">
+  <ul class="pagination justify-content-center">
 
-    <% destinations.forEach(function(destination) {%>
-      <div class="card mb-3">
- 
-        <div class="row">
-          <div class="col-md-4">
+    <li class="page-item <%= (currentPage === 1) ? 'disabled' : '' %>">
+      <a class="page-link" href="/destinations?page=<%= currentPage - 1 %>" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
 
-            <% if (destination.images.length) {%>
-              <img class="img-fluid" alt="" src="<%=destination.images[0].url %>" width="400" height="270">
-              <% } else { %>
-                <img class="img-fluid" alt=""
-                  src="https://res.cloudinary.com/deg98levx/image/upload/v1691106893/VoyageVibe/jxr8ljkvayafxtjn8esx.jpg"
-                  width="400" height="270">
-                <% } %>
+    <% for (let i = 1; i <= totalPages; i++) { %>      
+      <% if (i === currentPage) { %>
+          <li class="page-item active"><a class="page-link" href="#"><%= i %></a></li>
+      <% } else { %>
+          <li class="page-item"><a class="page-link" href="/destinations?page=<%= i %>"><%= i %></a></li>
+    <% }} %>
+    
+    <li class="page-item <%= (currentPage >= totalPages) ? 'disabled' : '' %> ">
+      <a class="page-link" 
+          href="/destinations?page=<%= currentPage + 1 %>" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
 
+<section class="row d-flex justify-content-center">
+
+ <div class="row g-0">
+  <% for (let destination of destinations.slice(start, end)) { %>
+    <div class="col-md-6 ">
+      <div class="card destination-card g-0">
+        <div class="row g-0">
+          <div class="col-md-6 card-img-left destination-image">
+            <% if (destination.images.length) { %>
+              <img class="img-fluid" alt="destination-image" src="<%= destination.images[0].url %>" width="400" height="270">
+            <% } else { %>
+              <img class="img-fluid" alt="destination-image"
+                   src="https://res.cloudinary.com/deg98levx/image/upload/v1691106893/VoyageVibe/jxr8ljkvayafxtjn8esx.jpg"
+                   width="400" height="270">
+            <% } %>
           </div>
-
-          <div class="col-md-8">
+          <div class="col-md-6">
             <div class="card-body">
               <h5 class="card-title">
-                <%= destination.title %>
+                <a href="/destinations/<%= destination._id %>"><%= destination.title %></a>
               </h5>
               <p class="card-text">
-                <%=destination.description %>
-              </p>
-              <p class="card-text">
-                <small class="text-muted">
-                  <%=destination.location %>
+                <small>
+                  <%= destination.description.substring(0, 100) %>...
                 </small>
               </p>
-              <a class="btn btn-primary" href="/destinations/<%= destination._id %>">View <%= destination.title %></a>
-              <a class="btn btn-primary" href="/destinations/<%= destination._id %>/edit"> Edit </a>
+              <p class="card-text text-muted">
+                <%= destination.location %>
+              </p>
             </div>
           </div>
         </div>
       </div>
-      <% }) %>
-
-<div class="container">
-            <div class="row">    
-                <div class=" text-center" >
-                <% if (pages && pages > 0) { %>
-                <ul class="pagination text-center">
-                    <% if (current == 1) { %>
-                    <li class="disabled"><a>First</a></li>
-                    <% } else { %>
-                    <li><a href="/destinations<%if(search){%>?search=<%=search%><%}%>">First</a></li>
-                    <% } %>
-             
-                    <% if (current == 1) { %>
-                    <li class="disabled"><a>«</a></li>
-                    <% } else { %>
-                    <li><a href="/destinations?page=<%= Number(current) - 1 %><%if(search){%>&search=<%=search%><%}%>">«</a></li>
-                    <% } %>
-             
-                    <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
-                    <% if (i !== 1) { %>
-                    <li class="disabled"><a>...</a></li>
-                    <% } %>
-                    <% for (; i <= (Number(current) + 4) && i <= pages; i++) { %>
-                    <% if (i == current) { %>
-                    <li class="active"><a><%= i %></a></li>
-                    <% } else { %>
-                    <li><a href="/destinations?page=<%= i %><%if(search){%>&search=<%=search%><%}%>"><%= i %></a></li>
-                    <% } %>
-                    <% if (i == Number(current) + 4 && i < pages) { %>
-                    <li class="disabled"><a>...</a></li>
-                    <% } %>
-                    <% } %>
-             
-                    <% if (current == pages) { %>
-                    <li class="disabled"><a>»</a></li>
-                    <% } else { %>
-                    <li><a href="/destinations?page=<%= Number(current) + 1 %><%if(search){%>&search=<%=search%><%}%>">»</a></li>
-                    <% } %>
-             
-                    <% if (current == pages) { %>
-                    <li class="disabled"><a>Last</a></li>
-                    <% } else { %>
-                    <li><a href="/destinations?page=<%= pages %><%if(search){%>&search=<%=search%><%}%>">Last</a></li>
-                    <% } %>
-                </ul>
-                <% } %>
-            </div>
-        </div>
     </div>
+  <% } %>
+</div>
+
+</section>
 
 
+<!-- Bootstrap5 Pagination  -->
+<nav aria-label="Page navigation" class="my-5 ">
+  <ul class="pagination justify-content-center">
 
+    <li class="page-item <%= (currentPage === 1) ? 'disabled' : '' %>">
+      <a class="page-link" href="/destinations?page=<%= currentPage - 1 %>" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
 
-      <script>
+    <% for (let i = 1; i <= totalPages; i++) { %>      
+      <% if (i === currentPage) { %>
+          <li class="page-item active"><a class="page-link" href="#"><%= i %></a></li>
+      <% } else { %>
+          <li class="page-item"><a class="page-link" href="/destinations?page=<%= i %>"><%= i %></a></li>
+    <% }} %>
+    
+    <li class="page-item <%= (currentPage >= totalPages) ? 'disabled' : '' %> ">
+      <a class="page-link" 
+          href="/destinations?page=<%= currentPage + 1 %>" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
+
+   <script>
         const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
         let destinations = { features: <%- JSON.stringify(destinations) %>};
       </script>
