--- a/views/destinations/show.ejs
+++ b/views/destinations/show.ejs
@@ -117,7 +117,7 @@
                   Rated: <%= comment.rating %> stars
                 </p>
 
-                 <% if(currentUser && destination.author.equals(currentUser._id)) { %>
+                 <% if(currentUser && comment.author.equals(currentUser._id)) { %>
                   <form action="/destinations/<%=destination._id %>/comments/<%=comment._id %>?_method=delete"
                     method="POST">
                     <button type="submit" class="btn btn-sm btn-outline-danger">Delete</button>
