--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,6 @@
      <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-       
     <link rel="stylesheet" href="/styles/home.css">
     <title>Voyage Vibes</title>
   </head>
@@ -32,7 +31,7 @@
         </div>
       </header>
 
-      <main class="px-3">
+      <main class="px-3" id="site">
         <h1>Voyage Vibes</h1>
         <p class="lead">
           Welcome to Voyage Vibes! <br>
