--- a/views/destinations/new.ejs
+++ b/views/destinations/new.ejs
@@ -58,3 +58,14 @@
       <a href="/destinations">All destinations</a>
     </div>
   </div>
+
+
+<script src="https://maps.googleapis.com/maps/api/js?key=<%=process.env.GOOGLE_KEY%>&callback=Function.prototype&libraries=places">></script>
+<script>
+    function initialize() {
+        var input = document.getElementById('location');
+        var autocomplete = new google.maps.places.Autocomplete(input);
+    }
+addEventListener('load', initialize);
+
+</script>
