--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,7 +10,7 @@
 
         <a class="nav-link active" href="/">Home</a>
 
-        <a class="nav-link" href="/destinations">Destinations</a>
+        <a class="nav-link" href="/destinations">All Destinations</a>
 
         <a class="nav-link" href="/destinations/new">Share Your Destination</a>
 
