--- a/views/destinations/show.ejs
+++ b/views/destinations/show.ejs
@@ -6,7 +6,7 @@
 
 
   <div class="row">
-    <div class="col-6 ">
+    <div class="col-8 ">
 
       <div id="destinationCarousel" class="carousel slide">
         <div class="carousel-inner">
@@ -43,13 +43,20 @@
         </div>
 
         <ul class="list-group list-group-flush">
+
+        <li class="list-group-item">
+            <%= destination.description%>
+          </li>
           <li class="list-group-item text-muted">
+       
           <i class="bi bi-geo-alt-fill"></i>
             <%= destination.location%>
           </li>
-          <li class="list-group-item">
-            <%= destination.description%>
+          <li class="list-group-item text-muted">
+             <!-- display the map -->
+       <div id='map' style='width: 100%; height: 300px;'></div>
           </li>
+          
 
         
         </ul>
@@ -68,10 +75,9 @@
       </div>
     </div>
 
-    <div class="col-6">
+    <div class="col-4">
 
-      <!-- display the map -->
-      <div id='map' style='width: 100%; height: 300px;'></div>
+      
 
 
       <% if(currentUser) { %>
